src/Korobi/WebBundle/Resources/assets/sass/korobi/irc/_logs.scss
@import url(//fonts.googleapis.com/css?family=Source+Code+Pro:400,700);

.logs {
  background-color: rgba(0, 0, 0, 0.5);
  padding: 1em;
  border-radius: 3px;
  display: table;

  .line {
    display: table-row;
    font-weight: 400;
    font-family: 'Source Code Pro', monospace;
    @include transition(0.25s all);

    &.highlighted {
      font-weight: bold;
      background-color: rgba(255, 10, 10, 0.2);
    }

    & > span {
      display: table-cell;
      padding-right: 15px;
      border-bottom: 1px solid #1b1b1b;
    }

    &:last-child > span {
      border-bottom: none;
    }

    .nick {
      text-align: right;
      border-right: 1px solid #444;

      &.owner:before    { content: '~'; color: nth($irc-colors,  5); }
      &.admin:before    { content: '&'; color: nth($irc-colors, 12); }
      &.operator:before { content: '@'; color: nth($irc-colors, 10); }
      &.half_op:before  { content: '%'; color: nth($irc-colors, 14); }
      &.voice:before    { content: '+'; color: nth($irc-colors,  9); }
    }

    .message {
      word-break: break-all;
      padding-right: 0;
      padding-left: 10px;
      white-space: pre;

      .underline { text-decoration: underline; }
      .italic    { font-style: italic; }
      .bold      { font-weight: bold; }
    }
  }

  .js-hl .fa {
    cursor: pointer;
  }

  // Light theme
  body.light & {
    background-color: #ddd;

    .line {
      &.highlighted {
        background-color: rgba(255, 239, 0, 0.75);
      }

      & > span {
        border-color: #ccc;
      }

      .nick {
        border-right-color: #888;
      }
    }
  }
}

/* Only enable when not tailing */
.logs:not(.tailing) .timestamp {
  cursor: pointer;

  &:hover {
    text-decoration: underline;
  }
}

